--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //pankaj added
+        setProperty("archivesBaseName", "CalculatorForLaunch")
+
     }
     buildTypes {
         release {
