--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         applicationId "whizkid.amaya.calculatorforlaunch"
 //        pankaj commented
 //        minSdkVersion 15
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -34,5 +34,7 @@ dependencies {
 
     //pankaj added
     compile 'com.intuit.sdp:sdp-android:1.0.5'
+    compile 'com.android.support:gridlayout-v7:27+'
+    compile 'com.android.support:appcompat-v7:27+'
 
 }
