cleanup started for equation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         //pankaj added
-        setProperty("archivesBaseName", "CalculatorForLaunch")
+        setProperty("archivesBaseName", "CalculatorLaunch")
 
     }
     buildTypes {
