--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SampleTestActivity" />
+
     </application>
 
-</manifest>
-
-    <!--android:windowSoftInputMode="stateAlwaysHidden"-->
+</manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" -->
