--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         >
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -17,8 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CalculatorSettings"></activity>
     </application>
 
-</manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" -->
-
-    <!--android:theme="@style/AppTheme"-->
+</manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
