--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CalculatorSettings"></activity>
+        <activity android:name=".CalculatorSettingsActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
