--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,13 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         >
         <activity android:name=".MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity android:name=".CalculatorSettingsActivity" />
-        <activity android:name=".Main2ActivityTestFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".CalculatorSettingsActivity" /></application>
 
 </manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
+    <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">-->
