--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.PINK_COLOR">
         >
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,3 +23,4 @@
 
 </manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
     <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">-->
+    <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
