--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PINK_COLOR">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         >
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CalculatorSettingsActivity" /></application>
+        <activity android:name=".CalculatorSettingsActivity" android:screenOrientation="portrait"/>
+    </application>
 
 </manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
     <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">-->
