--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/pankaj_calculator_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         >
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CalculatorSettingsActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".CalculatorSettingsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
-</manifest> <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" -->
-    <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">-->
-    <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+</manifest><!--android:roundIcon="@mipmap/ic_launcher_round"-->
+
+    <!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" --><!--android:theme="@style/Theme.AppCompat.Light.NoActionBar">--><!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
