Non solid Color Operator Button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:27+'
     compile 'com.android.support:appcompat-v7:27+'
 
+    //pankaj added for Gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
     //pankaj added for slidingmenu
     implementation 'com.android.support:appcompat-v7:27+'
     implementation 'com.android.support:design:27+'
