--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="whizkid.amaya.calculatorforlaunch">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="android.permission.UNINSTALL_SHORTCUT" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +20,23 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER">
+
+                    Intent shortcutIntent = new Intent();
+                    shortcutIntent.setClassName("whizkid.amaya.calculatorforlaunch.MainActivity", "SampleIntent");
+                    shortcutIntent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                    shortcutIntent.addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP);
+                    <!--shortcutIntent.putExtra("someParameter", "HelloWorld");-->
+
+                    Intent addIntent = new Intent();
+                    addIntent.putExtra(Intent.EXTRA_SHORTCUT_INTENT, shortcutIntent);
+                    addIntent.putExtra(Intent.EXTRA_SHORTCUT_NAME, @string/app_name);
+                    addIntent.putExtra(Intent.EXTRA_SHORTCUT_ICON_RESOURCE, Intent.ShortcutIconResource.fromContext(context, R.mipmap.ic_launcher));
+
+                    addIntent.setAction("com.android.launcher.action.INSTALL_SHORTCUT");
+                    context.sendBroadcast(addIntent);
+
+                </category>
             </intent-filter>
         </activity>
         <activity
