--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,12 @@ dependencies {
 //    implementation 'com.android.support:appcompat-v7:27.1.1'
 //    implementation 'com.android.support:design:27.1.1'
 
+    //pankaj sliding activity
+    compile 'com.r0adkll:slidableactivity:2.0.6'
+
+    //swipe
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+
+
+
 }
