--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:roundIcon="@mipmap/pankaj_calculator_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        >
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.AMAYA_CALCULATOR" />
             </intent-filter>
         </activity>
         <activity
@@ -29,7 +29,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".HistoryActivity"
-            android:theme="@style/AppTheme.SlidrActivityTheme"></activity>
+            android:theme="@style/AppTheme.SlidrActivityTheme" />
     </application>
 
 </manifest> <!-- android:roundIcon="@mipmap/ic_launcher_round" --><!-- android:windowSoftInputMode="stateAlwaysHidden" --><!-- android:theme="@style/AppTheme" --><!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar"> --><!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar" -->
