--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,18 +40,22 @@ dependencies {
     //pankaj added for Gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
-    //pankaj added for slidingmenu
     implementation 'com.android.support:appcompat-v7:27+'
     implementation 'com.android.support:design:27+'
+
+    //pankaj for swiping history
+    implementation 'com.android.support:recyclerview-v7:27+'
+//    implementation 'com.squareup.picasso:picasso:2.71828'
+//    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+}
+
 //    implementation 'com.android.support:appcompat-v7:27.1.1'
 //    implementation 'com.android.support:design:27.1.1'
 
-    //pankaj sliding activity
-    compile 'com.r0adkll:slidableactivity:2.0.6'
+//pankaj sliding activity
+//    compile 'com.r0adkll:slidableactivity:2.0.6'
 
-    //swipe
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+//swipe
+//    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 
-
-
-}
